# habit_tracker_project

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  celerybeat-schedule  docker-compose.yml  pyproject.toml
config/: celery.py  settings.py  urls.py
habits/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py
users/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
