[tool.poetry]
name = "habit-tracker-project"
version = "0.1.0"
description = ""
authors = ["ildar_safarov <ildarsafarov555@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^6.0.4"
djangorestframework = "^3.17.1"
psycopg2-binary = "^2.9.12"
python-dotenv = "^1.2.2"
djangorestframework-simplejwt = "^5.5.1"
django-cors-headers = "^4.9.0"
celery = "^5.6.3"
redis = "^7.4.0"
django-celery-beat = "^2.9.0"
drf-yasg = "^1.21.15"
requests = "^2.33.1"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-django = "^4.12.0"
coverage = "^7.13.5"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
